# banditdb-python

./: LICENSE  README.md  pyproject.toml
banditdb/: __init__.py  client.py  exceptions.py  mcp_server.py
banditdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
banditdb_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_client.py
