[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banditdb"
version = "0.1.0"
description = "Official Python SDK for BanditDB"
authors =[{ name = "BanditDB Team" }]
requires-python = ">=3.8"
dependencies =[
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "mcp>=0.1.0"
]

[project.scripts]
banditdb-mcp = "banditdb.mcp_server:main"
