[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["banditdb"]


[project]
name = "banditdb-python"
version = "0.1.1"
description = "Official Python SDK for BanditDB"
authors = [{ name = "Simeon Lukov", email="s.lukov@dynamicpricing.ai" }]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "mcp>=0.1.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
]

readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
banditdb-mcp = "banditdb.mcp_server:main"

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
